[package]
name = "stylo_malloc_size_of"
version = "0.5.0"
authors = [ "The Servo Project Developers",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/stylo"
description = "An allocator-agnostic crate for measuring the heap size of a value"
edition = "2024"
rust-version = "1.85.0"

[lib]
path = "lib.rs"

[features]
gecko = [ "thin-vec/gecko-ffi",]
servo = [ "string_cache",]

[dependencies]
app_units = "0.7.8"
cssparser = "0.35.0"
euclid = "0.22.11"
smallbitvec = "2.6.0"
smallvec = "2.0.0-alpha.11"
void = "1.0.2"

[dependencies.selectors]
path = "../selectors"

[dependencies.servo_arc]
path = "../servo_arc"

[dependencies.string_cache]
version = "0.9.0"
optional = true

[dependencies.thin-vec]
version = "0.2.14"
default-features = false
