[package]
name = "stylo_derive"
version = "0.5.0"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
repository = "https://github.com/servo/stylo"
edition = "2024"
rust-version = "1.85.0"
description = "Derive crate for Stylo CSS engine"
readme = "../README.md"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
darling = { version = "0.21.3", default-features = false }
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", default-features = false, features = ["clone-impls", "derive", "parsing"] }
synstructure = "0.13.2"
