[package]
name = "stylo_traits"
version = "0.5.0"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
repository = "https://github.com/servo/stylo"
edition = "2024"
rust-version = "1.85.0"
description = "Types used by the Stylo CSS engine"
readme = "../README.md"

[lib]
name = "style_traits"
path = "lib.rs"

[features]
servo = ["stylo_atoms", "cssparser/serde", "url", "euclid/serde"]
gecko = []

[dependencies]
app_units = "0.7.8"
bitflags = "2.9.4"
cssparser = "0.35.0"
euclid = "0.22.11"
malloc_size_of = { git = "https://github.com/cyrup-ai/stylo", branch = "main", package = "stylo_malloc_size_of" }
malloc_size_of_derive = "0.1.3"
selectors = { git = "https://github.com/cyrup-ai/stylo", branch = "main", package = "selectors" }
serde = "1.0.226"
servo_arc = { git = "https://github.com/cyrup-ai/stylo", branch = "main", package = "servo_arc" }
stylo_atoms = { git = "https://github.com/cyrup-ai/stylo", branch = "main", package = "stylo_atoms", optional = true }
thin-vec = { version = "0.2.14", default-features = false }
to_shmem = { git = "https://github.com/cyrup-ai/stylo", branch = "main", package = "to_shmem" }
to_shmem_derive = { git = "https://github.com/cyrup-ai/stylo", branch = "main", package = "to_shmem_derive" }
url = { version = "2.5.7", optional = true }
