[package]
name = "stylo_dom"
version = "0.5.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/stylo_dom/"
description = "DOM state types for Stylo"
repository = "https://github.com/servo/stylo"
keywords = ["css", "style"]
license = "MPL-2.0"
edition = "2024"
rust-version = "1.85.0"
readme = "../README.md"

[lib]
path = "lib.rs"

[dependencies]
bitflags = "2.9.4"
malloc_size_of = { path = "../malloc_size_of", package = "stylo_malloc_size_of" }
