[package]
name = "to_shmem"
version = "0.2.0"
authors = [ "The Servo Project Developers",]
license = "MPL-2.0"
repository = "https://github.com/servo/stylo"
edition = "2024"
rust-version = "1.85.0"
description = "Trait to write to a contiguous chunk of shared memory"

[lib]
name = "to_shmem"
path = "lib.rs"

[features]
servo = [ "cssparser/serde", "cssparser", "servo_arc", "smallbitvec", "smallvec", "string_cache", "thin-vec",]
gecko = [ "thin-vec/gecko-ffi", "cssparser", "servo_arc", "smallbitvec", "smallvec", "thin-vec",]
cssparser = [ "dep:cssparser",]
servo_arc = [ "dep:servo_arc",]
smallbitvec = [ "dep:smallbitvec",]
smallvec = [ "dep:smallvec",]
string_cache = [ "dep:string_cache",]
thin-vec = [ "dep:thin-vec",]

[dependencies.cssparser]
version = "0.35.0"
optional = true

[dependencies.servo_arc]
path = "../servo_arc"
optional = true

[dependencies.smallbitvec]
version = "2.6.0"
optional = true

[dependencies.smallvec]
version = "2.0.0-alpha.11"
optional = true

[dependencies.string_cache]
version = "0.9.0"
optional = true

[dependencies.thin-vec]
version = "0.2.14"
default-features = false
optional = true
